--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ body {
 .footer-link,
 .footer-map {
   color: rgba(255, 255, 255, 0.6);
-  font-weight;: 400;
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -87,7 +87,7 @@ body {
   font-style: normal;
 }
 .footer-map {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 /* header */
