Оформление текста и цвета

--- a/css/styles.css
+++ b/css/styles.css
@@ -154,7 +154,7 @@ body {
   color: #ffffff;
   background-color: #2196f3;
 }
-/* ground */
-.ground {
+/* bcground */
+.bcground {
   background-color: #2f303a;
 }
