--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,14 @@ body {
   color: var(--primary-text-color);
   font-family: "Roboto", sans-serif;
 }
+
+.link {
+  text-decoration: none;
+}
 /* Logo */
 .logo {
   color: var(--accent-color);
-  font-family: "Raleway", cursive;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -24,21 +28,21 @@ body {
   list-style: none;
 }
 /* site nav */
-.site-nav .link {
-  color: #212121;
-  text-decoration: none;
-}
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent-color);
 }
-.site-nav .link.current {
-  color: var(--accent-color);
+.site-nav-link {
+  color: #212121;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
+.current {
+  color: var(--accent-color);
+}
+
 /* section-tittle */
 .section-tittle {
   color: var(--tittle-text-color);
@@ -57,7 +61,6 @@ body {
   letter-spacing: 0.03em;
 }
 .mainbusiness .text {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -67,19 +70,20 @@ body {
   color: var(--tittle-text-color);
 }
 .ourteam .text {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
 }
 /* footer */
+.footer {
+  background-color: #2f303a;
+}
 .footer .logocolor {
   color: #ffffff;
 }
 .footer-link,
 .footer-map {
   color: rgba(255, 255, 255, 0.6);
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -96,7 +100,7 @@ body {
 }
 .header-contacts {
   text-decoration: none;
-  color: #757575;
+  color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -108,6 +112,9 @@ body {
 }
 
 /* hero */
+.hero {
+  background-color: #2f303a;
+}
 .hero-tittle {
   color: #ffffff;
   font-weight: 900;
@@ -123,6 +130,7 @@ body {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
+  cursor: pointer;
 }
 /* portfolio */
 .portfolio-tittle {
@@ -134,7 +142,6 @@ body {
   letter-spacing: 0.06em;
 }
 .cards .text {
-  font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
   text-align: left;
@@ -148,13 +155,10 @@ body {
   font-size: 16px;
   line-height: 1.63;
   letter-spacing: 0.03em;
+  cursor: pointer;
 }
 .filters .button:hover,
 .filters .button:focus {
-  color: #ffffff;
+  color: var(--button-color);
   background-color: #2196f3;
-}
-/* bcground */
-.ground {
-  background-color: #2f303a;
 }
